modification lien img icone chargement

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -165,7 +165,7 @@ pointer-events: none;
 }          
 
 .loading::after {
-content :url('/images/fourchette.svg')'ohmyfood';
+content :url('https://stepheniki.github.io/Projet3/images/fourchette.svg')'ohmyfood';
 font-family: 'Shrikhand';
 font-size: 18px;
 background: #ffffff;
