--- a/style.css
+++ b/style.css
@@ -486,7 +486,7 @@ body .container {
   display: block;
 }
 
-@media (min-width: 337px) {
+@media (min-width: 450px) and (max-width: 1900px) {
   .liste {
     align-content: center;
     align-items: center;
@@ -516,8 +516,6 @@ body .container {
     justify-content: center;
     align-items: center;
   }
-}
-@media (min-width: 776px) {
   .button.degradé {
     width: 30%;
   }
@@ -560,7 +558,7 @@ body .container {
     position: relative;
     padding-left: 10px;
     padding-right: 10px;
-    width: 50%;
+    width: 70%;
   }
   .fond.menu .button.degradé {
     width: 100%;
