--- a/sass/style.scss
+++ b/sass/style.scss
@@ -115,17 +115,24 @@ body {
           white-space: nowrap;
           text-overflow: ellipsis;
           overflow: hidden;
-          transition: padding-right 450ms ease-in-out;
+          transition: padding-right 220ms ease-in-out;
           &:hover {
             padding-right: 50px;
+            
           }
+
+          
           &:hover .cross {
             opacity: 1;
-            transform: translate(0px);
+            transform: translate(-70px);
+            margin-right: -70px;
+            
+           
           }
           &:hover .fa-check-circle {
             transform: rotate(360deg) ;
-          }
+            
+                   }
         
         }
         
@@ -143,7 +150,11 @@ body {
                     top: 0px;
                     right: 0px;
           opacity: 0;
-          transition: transform 330ms ease-in-out;
+           transition-property: transform;
+          transition-duration: 700ms;
+          transition-timing-function: all;
+          transition-delay: 0s;
+
           & .fa-check-circle {
             color: rgb(255, 255, 255);
             transition: transform 500ms ease-in-out;
@@ -152,10 +163,10 @@ body {
      
 .loading              {
   display: block;
-position: absolute;
+position: fixed;
 width: 100%;
 height: 100%;
-z-index: 999;
+z-index: 10000;
 /*ici tout ce qui concerne votre background linear gradient*/
 background-color: rgb(255, 255, 255);
 animation: hideLoader 3500ms 1 forwards;
@@ -190,7 +201,7 @@ animation: spin 3s linear infinite;
  @keyframes hideLoader{
  100%   {
 opacity: 0;
-display: none;
+z-index: -10;
 
                 }}
               
@@ -438,33 +449,43 @@ font-weight: 500;
 
 //icone coeur // 
 .fa {
-  
+ 
   &.fa-hover-hidden {
       color: #a3a3a3;
       position: relative;
       float: right;
-      padding-right: 28px;
-      padding-top: 25px;
+      right: 18px;
+      top: 25px;
       font-size: 25px;
+     
     }
-&.fa-hover-show {
+&.fa-hover-show  {
       float: right;
-      padding-right: 28px;
-      padding-top: 25px;
+      top: 25px;
       background-clip: text;
 background: linear-gradient(to bottom, #ff79da 0%, #9356dc 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 25px;
-    
+    left: 7px;
     
     }}
-//icone coeur regular disparait au survol // 
+    
+        
+    //icone coeur regular disparait au survol // 
 .fa.fa-hover-show, :hover > .fa.fa-hover-hidden {
-        display: none;    }
+        opacity: 0; 
+
+        }
+           
 //icone coeur solid apparait au survol // 
 :hover > .fa.fa-hover-show {
-        display: block;
+opacity: 1;  
+transition:  3s ;       
+float: right;
+       position: relative;
+      
+       
             }  
   
   
